--- a/main.css
+++ b/main.css
@@ -14,6 +14,14 @@
     }
 }
 
+.tile {
+    border-radius: 50px;
+    transition: 500ms ease-out all;
+}
 .tile:hover {
     cursor: pointer;
+}
+
+.is-invisible {
+    opacity: 0;
 }
